--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/funciones.js"></script>
+    <!-- <script type="module" src="./src/circulo-n-segmentos.js"></script> -->
+    <script type="module" src="./src/funcion-onda-seno.js"></script>
   </body>
 </html>
